# stella

./: Cargo.toml  INSTALL  INSTALL.md  LICENSE  README.md
node/node/: Cargo.toml
node/node/src/: service.rs
node/pallets/stella/: Cargo.toml
node/pallets/stella/src/: lib.rs
node/runtime/: Cargo.toml
src/: lib.rs
substrate/: Cargo.toml
substrate/node/src/: chain_spec.rs
substrate/pallets/stella/: Cargo.toml
substrate/pallets/stella/src/: lib.rs
substrate/runtime/src/: lib.rs
